Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18096

sanity-sec test_47: FAIL: link should not point to anywhere useful

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.16.0
    • Ubuntu 24.04 client
    • 3
    • 9223372036854775807

      This issue was created by maloo for jianyu <yujian@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/588633a4-4b73-4f21-81c0-559276c42453

      test_47 failed with the following error:

      Starting client: onyx-33vm1.onyx.whamcloud.com:  -o user_xattr,flock onyx-33vm6@tcp:/lustre /mnt/lustre
      CMD: onyx-33vm1.onyx.whamcloud.com mkdir -p /mnt/lustre
      CMD: onyx-33vm1.onyx.whamcloud.com mount -t lustre -o user_xattr,flock onyx-33vm6@tcp:/lustre /mnt/lustre
      1 keys reaped
      ln: failed to create hard link '/mnt/lustre/d47.sanity-sec/7LbVpF4z6UVFAlI9mu6IsQ/linkfile' => '/mnt/lustre/d47.sanity-sec/5viLYPH3mDcC-WXaJi7LEA': Required key not available
      rename '/mnt/lustre/d47.sanity-sec/5viLYPH3mDcC-WXaJi7LEA' returned -1: Required key not available
      rename '/mnt/lustre/onefile' returned -1: Required key not available
      +AAAAAAAAAABvA4L60SRQ0EG5QBdo5RmZ
      /mnt/lustre/d47.sanity-sec/+AAAAAAAAAABvA4L60SRQ0EG5QBdo5RmZ
       sanity-sec test_47: @@@@@@ FAIL: link should not point to anywhere useful 
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-master/4558 - 6.8.0-35-generic
      servers: https://build.whamcloud.com/job/lustre-master/4558 - 5.14.0-427.24.1_lustre.el9.x86_64

      <<Please provide additional information about the failure here>>

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-sec test_47 - link should not point to anywhere useful

            sebastien Sebastien Buisson
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: