LU-18096 enc: ll_get_symlink overlay function

ll_get_symlink() overlay function is necessary to properly encode for
presentation the symlink target when the encryption key is not
available, in a way that is compatible with the overlay function
ll_setup_filename(), so that further readlink without the encryption
key works properly.

Test-Parameters: testlist=sanity-sec env=ONLY=47,ONLY_REPEAT=10 mdscount=2 mdtcount=4 osscount=1 ostcount=8 clientcount=2
Test-Parameters: testlist=sanity-sec env=ONLY=47,ONLY_REPEAT=10 mdscount=2 mdtcount=4 osscount=1 ostcount=8 clientcount=2 clientdistro=ubuntu2404 serverdistro=el8.8
Signed-off-by: Sebastien Buisson <sbuisson@ddn.com>
Change-Id: I141a89d43f392dd4782e148590bc324ea252c2af
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/56568
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Jian Yu <yujian@whamcloud.com>
Reviewed-by: Lai Siyao <lai.siyao@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>